<resources>
    <string name="app_name">Donasi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_welcome">Welcome Back</string>
    <string name="til_email">Email Address</string>
    <string name="til_pass">Password</string>
    <string name="btn_login">Login</string>
    <string name="tv_forgot_pass">Forgot Password?</string>
    <string name="tv_register_direction">Don\'t Have an Account?</string>
    <string name="tv_register">Register</string>
    <string name="ic_back">Back</string>
    <string name="tv_create_account">Create Your Account</string>
    <string name="til_name">Full Name</string>
    <string name="til_phone">Phone Number</string>
    <string name="til_confirm">Confirm Password</string>
    <string name="btn_register">Register</string>
    <string name="tv_category_1">Popular</string>
    <string name="tv_quote_home">Go ahead, even small things can make a big difference.</string>
    <string name="tv_search">Search</string>
    <string name="btn_donate">Donate</string>
    <string name="tv_readMore"><u>Read more</u></string>
    <string name="tv_story">Story</string>
    <string name="tv_donate">Donate</string>
    <string name="tv_enterNominal">Enter the nominal of donation:</string>
    <string name="tv_rp">Rp</string>
    <string name="tv_donateMinimum">Minimum donation amount is Rp 10.000</string>
    <string name="tv_selectPayment">Select payment method:</string>
    <string name="btn_continuePayment">Continue Payment</string>
    <string name="tv_transferTo">Transfer according to the nominal below:</string>
    <string name="tv_donation">Donation</string>
    <string name="tv_uniqueCode">Unique Code</string>
    <string name="tv_payment_info">Payments are made to the bank account:</string>
    <string name="btn_seePaymentStatus">See Payment Status</string>
    <string name="tv_payment_warning">Complete your transaction in 1x24 hours. Otherwise, your donation will be automatically canceled by the system.</string>
    <string name="tv_takeALook">Take a Look</string>
    <string name="tv_quote_history">Hopefully, your past donation can motivate you to not stop sharing and make you love yourself because you are a pretty good person, cheers!</string>
    <string name="tv_form_donation">Form Donation</string>

    <!--Text-->
    <string name="text_empty">This is Empty Field</string>
    <string name="text_invalid">Invalid Email Address</string>
    <string name="text_not_match">Password Didn\'t Match</string>
    <string name="tv_forgot">Forgot your Password?</string>
    <string name="tv_forgot_info">Please enter your email address and we will send you a password reset link</string>
    <string name="btn_send">Send</string>
    <string name="tv_intro_admin">Hello, Admin</string>
    <string name="tv_quote">Go Ahead, even small things can make a big difference</string>
    <string name="tv_category_1_admin">Available Donations</string>
    <string name="text_date">%1$d-%2$d-%3$d</string>
    <string name="tv_edit_donation">Edit Donation</string>
    <string name="tv_detail_payment">Payment Details</string>

    <!--icon strings-->
    <string name="nav_history">History</string>
    <string name="nav_profile">Profile</string>
    <string name="btn_update">Update Profile</string>
    <string name="nav_pass">Change Password</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_donate">Donate</string>
    <string name="nav_detailDonation">More Information</string>
    <string name="nav_paymentInstruction">Payment Instruction</string>
    <string name="nav_historyUser">My Donations</string>
    <string name="nav_adminOrganizer">Donations</string>
    <string name="fab_add">Add Data</string>
    <string name="nav_receipt">List Payment</string>
    <string name="til_title">Title</string>
    <string name="til_start_date">Start Date</string>
    <string name="til_end_date">End Date</string>
    <string name="til_target">Target Donation (in Rupiah)</string>
    <string name="til_story">Story</string>
    <string name="btn_start_fund">Start Fundraising</string>
    <string name="btn_save">Save Data</string>
    <string name="tv_admDetail_name">Account Name</string>
    <string name="tv_admDetail_bank">Bank Transfer</string>
    <string name="tv_admDetail_donation">Donation</string>
    <string name="tv_admDetail_transferDate">Transfer Date</string>
    <string name="btn_edit">Edit</string>
    <string name="tv_preview"><u>Preview</u></string>

</resources>